--- a/index.html
+++ b/index.html
@@ -28,12 +28,28 @@
 
   <nav class="navbar navbar-light " >
     <div class="container-fluid">
-      <a class="navbar-brand" style="color:blue">Learnest</a>
+      <a class="navbar-brand" style="color:#427bff">Learnest</a>
       <form class="d-flex">
         <button class="btn btn-primary " type="submit">LOG IN</button>
       </form>
     </div>
   </nav>
+   <!-- HOME PAGE  -->
+  <section id="home">
+
+    <main id="carouselExampleSlidesOnly" class="carousel" data-ride="carousel" data-interval="1500" >
+     <div class="carousel main" id="testimonials"  style="background-image:linear-gradient(#000000fc,#00000057),url(image/main-img.jpg)">
+     </style>
+     <div class="carousel-item active main-content">
+       <h1> Learn online through self-paced courses anywhere, anytime</h1>
+       <p>Learn online through self-paced courses anywhere, anytime </p>
+       <div >
+        <button class="btn btn-primary sign-btn" type="submit">SIGN UP FOR FREE</button>
+      </div>
+    </div>
+  </main>
+</section>
+  
 
 </body>
 </html>
