why choose learnest

--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
   </main>
 </section>
   
+  <!-- WHY CHOOSE LEARNEST -->
 
+
+<section id="wcl">
+    <div class="wcl">
+      <div class="container">
+        <div class="row">
+          <div class="col cl-1 ">
+           <p>WHY CHOOSE LEARNEST?</p>
+           <h1> Self-Paced Hybrid Courses on your demand</h1>
+         </div>
+         <div class="col cl-2">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet libero vitae dui molestie lobortis. Nulla ut sem lobortis, varius eros at, commodo tellus. Sed blandit interdum lectus, ac varius sapien aliquam at.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  
 </body>
 </html>
