card and there more for you

--- a/index.html
+++ b/index.html
@@ -70,6 +70,62 @@
     </div>
   </div>
   </section>
+  <section>
+    <div class="wcl-card">
+      <div class="container ">
+        <div class="row">
+          <div class="col ">
+           <div class="card" style="width: 18rem;">
+            <img src="image/logo1.png" class="card-img-top" alt="logo">
+            <div class="card-body">
+              <h5 class="card-title">Self-Paced Courses</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet libero vitae dui molestie lobortis. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col ">
+          <div class="card" style="width: 18rem;">
+            <img src="image/logo1.png" class="card-img-top" alt="logo">
+            <div class="card-body">
+              <h5 class="card-title">Access to Top Resource</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet libero vitae dui molestie lobortis. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="image/logo1.png" class="card-img-top" alt="logo">
+            <div class="card-body">
+              <h5 class="card-title">300+ Unique Courses</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet libero vitae dui molestie lobortis.  Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  
+  <!-- there is more for you -->
+  
+  <section id="timfy">
+    <div class="timfy">
+      <div class="container">
+        <div class="row">
+          <div class="col cl-1 ">
+           <p>THERE IS MORE FOR YOU</p>
+           <h1> Become part of growing community </h1>
+         </div>
+         <div class="col cl-2">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet libero vitae dui molestie lobortis. Nulla ut sem lobortis, varius eros at, commodo tellus. Sed blandit interdum lectus, ac varius sapien aliquam at.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  
   
 </body>
 </html>
