--- a/index.html
+++ b/index.html
@@ -125,6 +125,116 @@
     </div>
   </div>
   </section>
+
+  <!-- vertical-card -->
+
+
+
+<section>
+    <div class="vl-card">
+      <div class="container ">
+        <div class="row">
+          <div class="col ">
+           <div class="card" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Tech summits</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+            </div>
+            <img src="image/tech.jpg" class="card-img-top" alt="logo">
+          </div>
+        </div>
+        <div class="col ">
+          <div class="card" style="width: 20rem;">
+  
+            <div class="card-body">
+              <h5 class="card-title">Bootcamp</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <img src="image/bootcamp.png" class="card-img-top" alt="logo">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 20rem;">
+  
+            <div class="card-body">
+              <h5 class="card-title">Tech Conference</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <img src="image/conference.jpg" class="card-img-top" alt="logo">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  
+  
+  <!-- Footer -->
+  
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col fcl-1">
+          <h1 style="color:blue">Learnest </h1>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Aliquam sit amet libero vitae dui molestie lobortis. Nulla ut
+              sem lobortis, varius eros at, commodo tellus. 
+            </p>
+          </div>
+        </div>
+        <div class="col ">
+          <div class="links">
+            <h4>COURSE CATEGORIES</h4>
+            <hr></hr>
+            <ul>
+              <li>Mobile App Development</li>
+              <li>Programming Launguage</li>
+              <li>Database</li>
+              <li>Software Testing</li>
+              <li>Software Engineering</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col">
+          <div class="links">
+            <h4>FOR INSTITUTES</h4>
+            <hr></hr>
+            <ul>
+              <li>Institute Sign Up</li>
+              <li>Institute Sign in</li>
+              <li>Send Request</li>
+              <li>Contact For Queries</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col">
+          <div class="links">
+            <h4>Follow Us EVERYWHERE</h4>
+            <hr></hr>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+  
+            <a href="#" class="fa fa-linkedin"></a>
+  
+            <a href="#" class="fa fa-instagram"></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="f-last">
+     <div class="container">
+      <div class="row">
+        <div class="col">
+         <p>Copyright © 2022 Learnest. All Rights Reserved<p>
+         </div>
+         <div class="col cl-r" >
+          <p>learnest is a registered trademark of ABC PVT LTD<p>
+          </div>
+        </div>
+      </div>
+    </div>
   
   
 </body>
