--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 
   <nav class="navbar navbar-light " >
     <div class="container-fluid">
-      <a class="navbar-brand" style="color:#427bff">Learnest</a>
+      <a class="navbar-brand" style="color:#427bff"><img
+        src="image/logo1.png"
+        width="45"
+        height="45"
+        alt="logo"/>Learnest</a>
       <form class="d-flex">
         <button class="btn btn-primary " type="submit">LOG IN</button>
       </form>
@@ -175,7 +179,11 @@
     <div class="container">
       <div class="row">
         <div class="col fcl-1">
-          <h1 style="color:blue">Learnest </h1>
+          <h1 style="color:blue"><img
+            src="image/logo1.png"
+            width="45"
+            height="45"
+            alt="logo"/>Learnest </h1>
           <div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
